Set input font-size to 16px to prevent auto zoom on mobile

--- a/styles/UI/SearchBar.module.css
+++ b/styles/UI/SearchBar.module.css
@@ -13,6 +13,7 @@
     border: none;
     color: ivory;
     background-color: var(--gray);
+    font-size: 16px;
 }
 
 .searchBar:focus {
